--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -1,4 +1,93 @@
 @charset "UTF-8";
 
-body{
+body, input, button {
+  font-family: 'Roboto', sans-serif;
+}
+
+header{
+  width:100%;
+  height:50px;
+  position:fixed;
+  padding:15px;
+  top:0;
+  left:0;
+  z-index:5;
+  background:#25b99a;
+  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
+  border-bottom-right-radius:10px;
+  border-bottom-left-radius:10px;
+}
+
+header input {
+  width:80%;
+  height:50px;
+  float:left;
+  color:#fff;
+  font-size:15px;
+  font-weight:400px;
+  text-indent:18px;
+  padding:0 60px 0 0;
+  background: rgba(255, 255, 255, 0.2);
+  border-top-left-radius:5px;
+  border-bottom-left-radius:5px;
+  border-top-right-radius:50px;
+  border-bottom-right-radius:50px;
+  border:0px;
+  box-shadow:none;
+  outline:none;
+
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  -ms-appearance:none;
+  -o-appearance:none;
+  appearance:none;
+}
+
+header input::-webkit-input-placeholder{
+  color:rgba(255, 255, 255, 0.75);
+}
+
+header input::-moz-input-placeholder{
+  color:rgba(255, 255, 255, 0.75);
+}
+
+header input::-ms-input-placeholder{
+  color:rgba(255, 255, 255, 0.75);
+}
+
+header input::-o-input-placeholder{
+  color:rgba(255, 255, 255, 0.75);
+}
+
+header button{
+  width:50px;
+  height:50px;
+  position:absolute;
+  top:15px;
+  right:30px;
+  z-index:2;
+  border-radius:25px;
+  background:#fff;
+  border:0;
+  box-shadow: none;
+  outline:none;
+
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  -ms-appearance:none;
+  -o-appearance:none;
+  appearance:none;
+}
+
+header button svg {
+  width:16px;
+  height:16px;
+  position:absolute;
+  top:50%;
+  left:50%;
+  margin:-8px 0 0 -8px;
+}
+
+header button svg .fill{
+  fill:#25b99a;
 }
