--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -1,7 +1,16 @@
 @charset "UTF-8";
 
+body{
+  background:#edf0f1;
+  padding:80px 0 0 0;
+}
+
 body, input, button {
   font-family: 'Roboto', sans-serif;
+}
+
+.noFill {
+  fill: none;
 }
 
 header{
@@ -69,8 +78,9 @@ header button{
   border-radius:25px;
   background:#fff;
   border:0;
-  box-shadow: none;
+  box-shadow:none;
   outline:none;
+  cursor:pointer;
 
   -webkit-appearance:none;
   -moz-appearance:none;
@@ -90,4 +100,147 @@ header button svg {
 
 header button svg .fill{
   fill:#25b99a;
+}
+
+.container {
+  width:100%;
+  float:left;
+}
+
+ul.todo{
+  width:80%;
+  float:left;
+  padding-inline-start:0;
+  padding-left:10px;
+}
+
+ul.todo li{
+  width:85%;
+  min-height:35px;
+  float:left;
+  font-size:14px;
+  font-weight:500;
+  color:#444;
+  line-height:22px;
+  background:#fff;
+  border-radius:5px;
+  position:relative;
+  box-shadow: 0px 1px 2px rgba(44,62,80,0.10);
+  margin:0 0 10px 0;
+  list-style:none;
+  padding:14px 100px 0px 10px;
+}
+
+ul.todo li:last-of-type {
+  margin:0;
+}
+
+ul.todo li .buttons{
+width:100px;
+height:50px;
+position:absolute;
+top:0;
+right:0;
+}
+
+ul.todo li .buttons button{
+  width:50px;
+  height:50px;
+  float:left;
+  background:none;
+  position:relative;
+  border:0px;
+  box-shadow:none;
+  outline:none;
+  cursor:pointer;
+
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  -ms-appearance:none;
+  -o-appearance:none;
+  appearance:none;
+}
+
+ul.todo li .buttons button:last-of-type:before{
+  content:"";
+  width:1px;
+  height:30px;
+  position:absolute;
+  top:10px;
+  left:0;
+  background:#edf0f1;
+}
+
+ul.todo li .buttons button svg{
+  width:22px;
+  height:22px;
+  position:absolute;
+  top:50%;
+  margin:-11px 0 0 -11px;
+}
+
+ul.todo li .buttons button.complete svg{
+  border-radius:15px;
+  border:1.5px solid #25b99a;
+  transition:background 0.2s ease;
+
+  -webkit-transition:fill 0.2s ease;
+  -moz-transition:fill 0.2s ease;
+  -ms-transition:fill 0.2s ease;
+  -o-transition:fill 0.2s ease;
+  transition:fill 0.2s ease;
+}
+
+ul.todo#completed li .buttons button.complete svg {
+  background:#25b99a;
+  border:0px;
+}
+
+ul.todo:not(#completed) li .buttons button.complete:hover svg {
+  background:rgba(37,185,154,0.75);
+}
+
+ul.todo:not(#completed) li .buttons button.complete:hover svg .fill {
+  fill:#fff;
+}
+
+ul.todo#completed li .buttons button.complete svg .fill{
+  fill:#fff;
+}
+
+ul.todo li .buttons button svg{
+  -webkit-transition:fill 0.2s ease;
+  -moz-transition:fill 0.2s ease;
+  -ms-transition:fill 0.2s ease;
+  -o-transition:fill 0.2s ease;
+  transition:fill 0.2s ease;
+}
+
+
+ul.todo li .buttons button.remove svg .fill{
+  fill:#c0cecb;
+}
+
+ul.todo li .buttons button.remove:hover svg .fill{
+  fill:#e85656;
+}
+
+ul.todo li .buttons button.complete svg .fill{
+  fill:#25b99a;
+}
+
+ul.todo#completed:not(:empty){
+  position:relative;
+  padding:60px 0 0 0 ;
+  opacity:0.7;
+}
+
+ul.todo#completed:not(:empty):before {
+  width:50px;
+  height:1px;
+  background:#d8e5e0;
+  position:absolute;
+  top:30px;
+  left:50px;
+  margin: 0 0 0 -75px;
 }
