--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -14,7 +14,7 @@ body, input, button {
 }
 
 header{
-  width:100%;
+  width:90%;
   height:50px;
   position:fixed;
   padding:15px;
@@ -28,9 +28,14 @@ header{
 }
 
 header input {
-  width:80%;
+  width:70%;
   height:50px;
-  float:left;
+
+  position:absolute;
+  top:15px;
+  right:30px;
+  left:10px;
+  z-index:2;
   color:#fff;
   font-size:15px;
   font-weight:400px;
@@ -229,18 +234,37 @@ ul.todo li .buttons button.complete svg .fill{
   fill:#25b99a;
 }
 
-ul.todo#completed:not(:empty){
+ul.todo#completed{
   position:relative;
-  padding:60px 0 0 0 ;
+  padding:60px 0 0 10px;
   opacity:0.7;
 }
 
-ul.todo#completed:not(:empty):before {
-  width:50px;
-  height:1px;
+ul.todo#completed:before {
+  content:'';
+  width:250px;
+  height:1.5px;
   background:#d8e5e0;
   position:absolute;
-  top:30px;
-  left:50px;
+  top:15px;
+  left:100px;
   margin: 0 0 0 -75px;
+}
+
+ul.todo#todo:empty:after {
+  content:"You have nothing to do";
+  margin:15px 0 0 0;
+}
+
+ul.todo#completed:empty:after {
+  content: "You have yet to complete any tasks.";
+}
+
+ul.todo#todo:after ,
+ul.todo#completed:after{
+  width:100%;
+  display:block;
+  text-align: center;
+  font-size:12px;
+  color:#aaa;
 }
